# greentic-pack

./: .gitignore  Cargo.toml  README.md
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
ci/: local_check.sh
crates/greentic-flow/: Cargo.toml
crates/greentic-flow/src/: lib.rs
crates/greentic-interfaces/: Cargo.toml
crates/greentic-interfaces/src/: lib.rs
crates/greentic-pack/: Cargo.toml
crates/greentic-pack/examples/: build_demo.rs
crates/greentic-pack/src/: builder.rs  events.rs  lib.rs  messaging.rs  plan.rs  reader.rs  repo.rs
crates/greentic-pack/tests/: plan_cli.rs
crates/greentic-types/: Cargo.toml
crates/greentic-types/src/: lib.rs
crates/pack_component/: Cargo.toml  README.md
crates/pack_component/src/: data.rs  lib.rs
crates/pack_component_template/: Cargo.toml  README.md
crates/pack_component_template/src/: lib.rs
crates/pack_component_template/src/templates/: template_Cargo.toml  template_lib.rs
crates/pack_component_template/templates/: Cargo.toml
crates/packc/: Cargo.toml  README.md
crates/packc/assets/: mcp_adapter_25_06_18.component.wasm
crates/packc/schemas/: pack.schema.v1.json  pack.schema.v1.yaml  pack.v1.schema.json  pack.v1.schema.yaml
crates/packc/src/: build.rs  component_template.rs  embed.rs  flows.rs  lib.rs  main.rs  manifest.rs  mcp.rs  new.rs  sbom.rs  telemetry.rs  templates.rs
crates/packc/src/cli/: lint.rs  mod.rs  sign.rs  verify.rs
crates/packc/src/mcp/: adapter_cache.rs  adapter_ref.rs
crates/packc/src/pack_component_template/: Cargo.toml
crates/packc/src/pack_component_template/src/: data.rs  lib.rs
crates/packc/src/signing/: canon.rs  mod.rs  signer.rs  verify.rs
crates/packc/tests/: cli.rs  sign_verify.rs  tamper_detect.rs
docs/: events-provider-packs.md  pack-format.md  publishing.md  repo-pack-types.md  usage.md
examples/billing-demo/: pack.yaml
examples/billing-demo/flows/: main.ygtc
examples/qa-demo/: pack.yaml
examples/qa-demo/.packc/pack_component/src/: data.rs
examples/qa-demo/flows/: qa_answer_flow.ygtc  qa_orchestrator.ygtc
examples/reco-demo/: pack.yaml
examples/search-demo/: pack.yaml
examples/weather-demo/: pack.yaml
examples/weather-demo/.packc/pack_component/src/: data.rs  lib.rs
examples/weather-demo/flows/: weather_bot.ygtc
