[workspace]
members = [
    "crates/packc",
    "crates/pack_component",
    "crates/pack_component_template",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.8"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml_bw = "2.4"
serde_cbor = "0.11"
sha2 = "0.10"
hex = "0.4"
walkdir = "2"
thiserror = "2.0"
time = { version = "0.3", features = ["macros", "serde", "formatting", "parsing"] }
base64 = "0.22"
ignore = "0.4"
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
pkcs8 = { version = "0.10", features = ["pem"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
greentic-types = "0.1"
greentic-flow = "0.1"
greentic-interfaces = "0.4"
pack_component_template = "0.1"

[patch.crates-io]
pack_component_template = { path = "crates/pack_component_template" }
greentic-interfaces = { path = "vendor/greentic-interfaces-0.4.5" }
