[package]
name = "greentic-flow"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.dev>"]
description = "Stub Greentic flow loader and IR"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
