[package]
name = "packc"
edition.workspace = true
version.workspace = true
license.workspace = true
authors = ["Greentic <engineering@greentic.dev>"]
repository = "https://github.com/greentic/greentic-pack"
description = "Greentic pack builder CLI"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
greentic-flow = { workspace = true }
greentic-types = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
serde_yaml_bw = { workspace = true }
serde_json = { workspace = true }
serde_cbor = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
walkdir = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
indoc = "2"
